# Architect

./: .gitignore  Architect.sln  CMakeLists.txt  README.md
Architect/: Architect.vcxproj  Architect.vcxproj.filters  Game.cpp  Game.hpp  main.cpp
Architect/Core/: Camera.hpp  Coordinator.hpp  Game.cpp  Game.hpp  Window.cpp  Window.hpp
Architect/Core/Components/: ColorComponent.hpp  Components.hpp  PhysicsBody.hpp  Player.hpp  PlayerComponent.hpp  PositionComponent.hpp  Renderable.hpp  RidgidBody.hpp  SizeComponent.hpp  StaticComp.hpp  Transform.hpp
Architect/Core/ECS/: ComponentManager.hpp  Coordinator.hpp  Types.hpp
Architect/Core/Events/: EventDependencies.hpp  EventManager.hpp
Architect/Core/Input/: InputButtons.hpp  InputManager.cpp  InputManager.hpp
Architect/Core/Math/: Math.hpp  Vector2.hpp  Vector2f.hpp  Vector2i.hpp  Vector3.hpp  Vector3f.hpp  Vector3i.hpp  Vector4.hpp  Vector4i.hpp
Architect/Core/Rendering/: Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp
Architect/Core/Systems/: AddingSystem.cpp  AddingSystem.hpp  CameraController.cpp  CameraController.hpp  PlayerInputSystem.cpp  PlayerInputSystem.hpp  PlayerMoveSystem.cpp  PlayerMoveSystem.hpp  PlayerRenderSystem.cpp  PlayerRenderSystem.hpp  RenderRectSystem.cpp  RenderRectSystem.hpp  StaticRender.cpp  StaticRender.hpp  StaticRenderSystem.cpp  StaticRenderSystem.hpp
Architect/Core/Time/: Timing.cpp  Timing.hpp
Architect/Core/Util/: FileManager.cpp  FileManager.hpp  Log.hpp  (+2 more)
src/: Game.cpp  Game.hpp  main.cpp
src/Core/: Coordinator.hpp  Window.cpp  Window.hpp
(+52 files in other folders)
